tests/compile_fail/missing_handler_for_tell.stderr
error[E0308]: mismatched types
  --> $DIR/missing_handler_for_tell.rs:27:18
   |
27 |     address.tell(InvalidMessage)?;
   |                  ^^^^^^^^^^^^^^ expected struct `ValidMessage`, found struct `InvalidMessage`
